# testRepo

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: client.py  core.py  main.py  server.py
test/: test_client.py  test_core.py  test_env.py
