[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

packages = [
    {include = 'core', from='src'}
]

[project]
name = "testRepo"
version = "1.0.3"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src"
]

[tool.coverage.run]
source = ['project']